<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:id="@+id/progressBar" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="right">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <ImageView
                android:id="@+id/nowIconId"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_weight="1.31" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nowCityId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:editable="false"
                android:autoText="false"
                android:hint="City" />

            <TextView
                android:id="@+id/nowTempId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Temperature"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/nowMaxId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Max"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/nowMinId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Min"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_blue" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/nowConditionId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Condition"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/nowDescriptionId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Description"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/sunriseId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:autoText="false"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/nowSunriseId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/abc_dropdownitem_icon_width"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/sunsetId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/sunset"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/nowSunsetId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/abc_dropdownitem_icon_width"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/humidityId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/nowHumidityId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/abc_dropdownitem_icon_width"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/pressureId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/nowPressureId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/abc_dropdownitem_icon_width"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/windspeedId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/nowWindspeedId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/abc_dropdownitem_icon_width"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/windDirectionId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_direction"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/nowWindDirectionId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/abc_dropdownitem_icon_width"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/cloudinessId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/cloudiness"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/nowCloudinessId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/abc_dropdownitem_icon_width"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />
        </TableRow>

    </TableLayout>

</LinearLayout>