<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="90dp"
    android:weightSum="1"
    android:gravity="center_vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="90dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp" >

            <TextView
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/day"
                android:paddingTop="15dp"
                android:textSize="12dp"
                android:layout_marginTop="18dp" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/ico"
                android:layout_marginRight="2dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Small Text"
                    android:id="@+id/temp_max"
                    android:focusableInTouchMode="true"
                    android:textColor="@color/red"
                    android:layout_marginBottom="@dimen/abc_action_bar_default_padding_material"
                    android:textSize="12dp"
                    android:layout_marginTop="17dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Small Text"
                    android:textColor="@color/dark_blue"
                    android:id="@+id/temp_min"
                    android:textSize="12dp"
                    android:textIsSelectable="true"
                    android:layout_marginTop="13dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/speed"
                        android:id="@+id/textView"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Small Text"
                        android:id="@+id/speed"
                        android:textSize="12dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/wind_direction"
                        android:id="@+id/textView2"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Small Text"
                        android:id="@+id/direc"
                        android:textSize="12dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/humidity"
                        android:id="@+id/textView3"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Small Text"
                        android:id="@+id/cloudiness"
                        android:textSize="12dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/pressure"
                        android:id="@+id/textView4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Small Text"
                        android:id="@+id/pressure"
                        android:textSize="12dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="29dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Small Text"
                        android:id="@+id/rain"
                        android:textSize="12dp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>